k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndith-production
  labels:
    name: ndith-production
    environment: production
